# bi_cam

./: CMakeLists.txt  README.md  bi_cam.cpp  bi_cam.h  doc.txt  main.cpp  pc_process.cpp  pc_process.h  pcl-h.h  pointcloud.pcd
cam_params/: extrinsics.yml
save_data/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cloud_cluster_7.pcd  cloud_cluster_8.pcd  cloud_cluster_gongjian.pcd
util/: cv_painter.cc
vis/: vis_pcl.cpp  vis_pcl.h
